--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -10,6 +10,7 @@ header {
   background-color: #333;
   color: #fff;
   padding: 10px;
+  height: 100px;
 }
 
 .options-container {
@@ -20,6 +21,7 @@ header {
 
 .option {
   padding: 10px 20px;
+  height: 50px;
   cursor: pointer;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -36,4 +38,22 @@ header {
 .selected {
   background-color: #4CAF50;
   color: #fff;
+}
+
+.navbar {
+  background-color: #333;
+  overflow: hidden;
+  text-align: center; 
+}
+
+.nav-item {
+  display: inline-block; 
+  color: #fff;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.nav-item:hover {
+  background-color: #555;
 }
