CRUD de DEPT completo

--- a/templates/dept.html
+++ b/templates/dept.html
@@ -7,7 +7,10 @@
     <a href="{{url_for('editDept')}}" class="nav-item">Editar</a>
     <a href="{{url_for('delDept')}}" class="nav-item">Eliminar</a>
 </nav>
-{% block element %}
-{% endblock %}
+
+<div class="form">
+    {% block element %}
+    {% endblock %}
+</div>
 
 {% endblock %}
