--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -92,6 +92,7 @@ button {
   background-color: #4caf50;
   color: #fff;
   padding: 10px 15px;
+  margin-top: 25px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
