validaciones (valor mínimo, relaciones a si mismo)

--- a/templates/dept/add.html
+++ b/templates/dept/add.html
@@ -3,7 +3,7 @@
 {% block element %}
 <form method="POST">
     <label for="deptno">Número de Departamento:</label>
-    <input type="number" name="deptno" required>
+    <input type="number" name="deptno" required min="1">
 
     <label for="dname">Nombre del Departamento:</label>
     <input type="text" name="dname" required>
