Terminacion de app con validaciones

--- a/templates/emp/add.html
+++ b/templates/emp/add.html
@@ -20,7 +20,7 @@
     </select>
 
     <label for="hiredate">Fecha de Contratación:</label>
-    <input type="date" name="hiredate">
+    <input type="date" name="hiredate" required>
 
     <label for="sal">Salario:</label>
     <input type="number" name="sal">
