Otra correcion a editar

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
 
 <div class="options-container">
   <a href="{{ url_for('dept') }}" class="option" id="deptLink">DEPT</a>
-  <h1>NEO4J</h1>
+  <a href="{{ url_for('index') }}"><h1>NEO4J</h1></a>
   <a href="{{ url_for('emp') }}" class="option" id="empLink">EMP</a>
 </div>
 </header>
